Update repo configuration and actions (#17)